# rwlock

./: Makefile.am  configure.ac
src/: main.c  rwlock.c  rwlock.h
tests/: test1.c
